# stock-index

./: .gitignore  README.md  pyproject.toml
top_100_stock_index/: cli.py  exceptions.py  hello_world.py  queries.py  utility.py
top_100_stock_index/extract_data/: download.py  ticker_symbols.py  utility.py
top_100_stock_index/index/: index_setup.py
top_100_stock_index/ui/: main.py
