[project]
name = "top-100-stock-index"
version = "0.1.0"
description = ""
authors = [
    {name = "Akash Sharma",email = "2akash111998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.52,<0.3.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "typer (>=0.15.1,<0.16.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
