[project]
name = "top-100-stock-index"
version = "0.1.0"
description = ""
authors = [
    {name = "Akash Sharma",email = "2akash111998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "yfinance[nospam] (>=0.2.54,<0.3.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
